--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     build:
       context: ./tgbot
       dockerfile: dockerfile
+    pull_policy: build 
     environment:
       - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
     ports:
@@ -18,6 +19,7 @@ services:
     build:
       context: ./ttlinker
       dockerfile: dockerfile
+    pull_policy: build
     depends_on:
       - tgbot
     networks:
