Improved logging, error reporting, better connection handling, small code improvements

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     networks:
       - tiktok-network
 
-  tiktok-downloader:
+  tiktok-linker:
     image: tiktok-downloader:latest
     build:
       context: ./ttlinker
