--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,16 @@ services:
     image: hehehol33/owndownloaderbot:tgbot
     environment:
       - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
+      - PORT=9120  # 
     ports:
-      - "8098:8098"
+      - "9120:9120"  # 
     networks:
       - app-network
 
   tiktok-linker:
     image: hehehol33/owndownloaderbot:tiktok-linker
+    environment:
+      - PORT=9120  # 
     depends_on:
       - tgbot
     networks:
@@ -19,6 +22,8 @@ services:
 
   instagram-linker:
     image: hehehol33/owndownloaderbot:instagram-linker
+    environment:
+      - PORT=9120  # 
     depends_on:
       - tgbot
     networks:
