--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: hehehol33/owndownloaderbot:tgbot
     environment:
       - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
-      - PORT=9120
+      - PORT=9120 # custom port set
     ports:
       - "9120:8098"  # custom port set
     networks:
@@ -23,6 +23,8 @@ services:
   instagram-linker:
     image: hehehol33/owndownloaderbot:instagram-linker
     environment:
+      - IG_USERNAME=${IG_USERNAME}
+      - IG_PASSWORD=${IG_PASSWORD}
       - PORT=9120  # custom port set
     depends_on:
       - tgbot
