--- a/iglinker/dockerfile
+++ b/iglinker/dockerfile
@@ -1,9 +1,34 @@
-FROM python:3.11-slim
+# --- Stage 1: builder ---
+FROM python:3.11-slim as builder
 
+# Install system dependencies temporarily
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential \
+    && rm -rf /var/lib/apt/lists/*
+
+# Set working directory
 WORKDIR /app
 
-COPY . /app
+# Copy only necessary files
+COPY iglinker.py ./
+COPY requirements.txt ./
 
-RUN pip install instaloader websockets
+# Install Python dependencies to a temporary location and clean cache
+RUN pip install --upgrade pip \
+    && pip install --prefix=/install -r req.txt \
+    && rm -rf ~/.cache
 
+# --- Stage 2: final minimal image ---
+FROM python:3.11-slim
+
+# Set working directory
+WORKDIR /app
+
+# Copy installed Python packages from builder stage
+COPY --from=builder /install /usr/local
+
+# Copy application code
+COPY iglinker.py ./
+
+# Run the application
 CMD ["python", "iglinker.py"]
