--- a/ttlinker/package.json
+++ b/ttlinker/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "tiktok-linker",
-  "version": "1.0.0",
-  "description": "A WebSocket-based TikTok video linker",
-  "main": "ttlinker.js",
-  "dependencies": {
-    "@tobyg74/tiktok-api-dl": "^1.2.8",
-    "ws": "^8.0.0"
+  "name": "bunttlinker",
+  "private": true,
+  "devDependencies": {
+    "@types/bun": "latest",
+    "bun-types": "^1.2.9"
   },
-  "scripts": {
-    "start": "node ttlinker.js"
+  "peerDependencies": {
+    "typescript": "^5"
   }
 }
