Added YTlinker and youtube support for tgbot Supports shorts,videos,community posts & small tgbot dockerfile adj

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,15 @@ services:
     networks:
       - app-network
 
+  youtube-linker:  
+    image: hehehol33/owndownloaderbot:ytlinker
+    environment:
+      - PORT=9120 # custom port set
+    depends_on:
+      - tgbot
+    networks:
+      - app-network
+
 networks:
   app-network:
     driver: bridge
