--- a/tgbot/TikTok-bot.csproj
+++ b/tgbot/TikTok-bot.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
+    <RuntimeIdentifier>win-x64;linux-musl-x64</RuntimeIdentifier>
     <RootNamespace>TikTok_bot</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
