--- a/tgbot/TikTok-bot.csproj
+++ b/tgbot/TikTok-bot.csproj
@@ -3,7 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <RuntimeIdentifier>win-x64;linux-musl-x64</RuntimeIdentifier>
+    <RuntimeIdentifiers>win-x64;linux-musl-x64</RuntimeIdentifiers>
+
     <RootNamespace>TikTok_bot</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
