--- a/dev-docker-compose.yml
+++ b/dev-docker-compose.yml
@@ -28,8 +28,8 @@ services:
       - app-network
 
   tiktok-linker:
-    build: ./tiktok-linker
-    environment:
+    build: ./ttlinker
+#    environment:
 #      - PORT=9120  # custom port set
     depends_on:
       - tgbot
@@ -37,7 +37,7 @@ services:
       - app-network
 
   instagram-linker:
-    build: ./instagram-linker
+    build: ./iglinker
     environment:
       - IG_USERNAME=${IG_USERNAME}
       - IG_PASSWORD=${IG_PASSWORD}
@@ -49,7 +49,7 @@ services:
 
   youtube-linker:  
     build: ./youtube-linker
-    environment:
+#    environment:
 #      - PORT=9120 # custom port set
     depends_on:
       - tgbot
